2009-12-15 Add raw-image (unsampled) support for the ps backend. - JJL

2009-12-14 Add patch_artist kwarg to boxplot, but keep old default.
           Convert boxplot_demo2.py to use the new patch_artist. - ADS

2009-12-06 axes_grid: reimplemented AxisArtist with FloatingAxes support.
           Added new examples. - JJL

2009-12-01 Applied Laurent Dufrechou's patch to improve blitting with
           the qt4 backend - DSD 

2009-11-13 The pdf backend now allows changing the contents of
           a pdf file's information dictionary via PdfPages.infodict. - JKS

2009-11-12 font_manager.py should no longer cause EINTR on Python 2.6
           (but will on the 2.5 version of subprocess). Also the
           fc-list command in that file was fixed so now it should
           actually find the list of fontconfig fonts. - JKS

2009-11-10 Single images, and all images in renderers with
           option_image_nocomposite (i.e. agg, macosx and the svg
           backend when rcParams['svg.image_noscale'] is True), are
           now drawn respecting the zorder relative to other
           artists. (Note that there may now be inconsistencies across
           backends when more than one image is drawn at varying
           zorders, but this change introduces correct behavior for
           the backends in which it's easy to do so.)

2009-10-21 Make AutoDateLocator more configurable by adding options
           to control the maximum and minimum number of ticks. Also
           add control of the intervals to be used for ticking. This
           does not change behavior but opens previously hard-coded
           behavior to runtime modification`. - RMM

2009-10-19 Add "path_effects" support for Text and Patch. See
           examples/pylab_examples/patheffect_demo.py -JJL

2009-10-19 Add "use_clabeltext" option to clabel. If True, clabels
           will be created with ClabelText class, which recalculates
           rotation angle of the label during the drawing time. -JJL
